trunk/appointment/src/objects/Holiday__c.object
<CustomObject>
    <description>Business holiday dates.</description>
    <fields>
        <fullName>Holiday_Date__c</fullName>
        <label>Holiday Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Setting__c</fullName>
        <label>Business Name</label>
        <referenceTo>Setting__c</referenceTo>
        <relationshipLabel>Holidays</relationshipLabel>
        <relationshipName>Holidays</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Holiday</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Holiday Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holidays</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>